--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
   },
   "dependencies": {
     "apexcharts": "^3.44.0",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
+    "flowbite": "^2.2.0",
+    "flowbite-react": "^0.7.0",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "sass": "^1.69.5",
+    "tailwindcss": "^3.3.5",
     "web-vitals": "^3.5.0"
   },
   "devDependencies": {
